--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body{
 
 main{
     padding:70px 20px;
+    background: url('./images/bg-pattern-top-mobile.svg'),url('./images/bg-pattern-bottom-mobile.svg');
+    background-repeat: no-repeat;
+    background-position: right 0 top 0,bottom 0 right 0;
 }
 
 .title{
@@ -35,11 +38,18 @@ main{
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
-    
     margin-top: 30px;
 }
+
 .rating-card{
-    background-color: var(--light--gray-magenta)
+    background-color: var(--light--gray-magenta);
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.rating-card > p {
+    margin-top: 15px;
+    font-weight: 700;
 }
 
 
@@ -47,24 +57,36 @@ main{
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
-    
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .review-card{
     background-color: var(--very--dark--magenta);
     color: var(--white);
     border-radius: 12px;
+    padding: 40px 30px;
 }
 
 .user-info{
     display: flex;
+    gap: 20px;
+    align-items: center;
 }
 
 .user-img{
     border-radius: 50%;
+    height: 50px;
+    width: auto;
 }
 
 .sub-text{
+    margin-top: 5px;
     color: var(--soft--pink);
 }
+
+.review{
+    margin-top: 30px;
+    text-align: left;
+    line-height: 1.5em;
+}
+
