--- a/style.css
+++ b/style.css
@@ -18,10 +18,13 @@ body{
     background: url('./images/bg-pattern-top-mobile.svg'),url('./images/bg-pattern-bottom-mobile.svg');
     background-repeat: no-repeat;
     background-position: left 0 top 0,bottom 0 right 0;
+    min-height: 100vh;
 }
 
 main{
     padding:70px 20px;
+    margin: auto;
+    max-width: 500px;
 }
 
 .title{
@@ -31,6 +34,7 @@ main{
     margin-bottom: 20px;
 }
 .description{
+    max-width: 500px;
     color: var(--dark--gray--magenta)
 }
 
@@ -90,7 +94,7 @@ main{
     line-height: 1.5em;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 1200px) {
     body{
         background: url('./images/bg-pattern-top-desktop.svg'),url('./images/bg-pattern-bottom-desktop.svg');
         background-repeat: no-repeat;
@@ -102,24 +106,37 @@ main{
         max-width: 1440px;
         margin: auto;
         display: grid;
-        grid-template-rows: 1fr 1fr auto;
+        grid-template-rows: auto auto auto;
         grid-template-columns: 1fr 1fr;
+        
     }
     .title{
         /* grid */
         font-size: 5rem;
     }
     .description{
+        margin: 30px 0 60px;
         font-size: 1.3rem;
         grid-row: 2;
     }
     .rating-wrapper{
         grid-row: 1 /span 2;
-        grid-template-columns: repeat(3,2rem) auto repeat(3,2rem);
+        grid-template-columns: repeat(3,3rem) auto repeat(3,3rem);
         grid-template-rows: 3fr;
         gap: unset;
         row-gap: 20px;
         align-self: center;
+        margin-top: unset;
+    }
+    .rating-wrapper > .rating-card {
+        display: grid;
+        grid-template-columns: 40% 60%;
+        align-items: center;
+        padding: 20px 0;
+    }
+    .rating-wrapper > .rating-card > p {
+        margin-top: unset;
+        font-size: 1.3rem;
     }
     .rating-wrapper > .rating-card:nth-child(1) {
         grid-column: 1/ span 5;
